src/test/ui/nll/user-annotations/pattern_substs_on_tuple_enum_variant.stderr
warning: type parameter on variant
  --> $DIR/pattern_substs_on_tuple_enum_variant.rs:10:19
   |
LL |     let Foo::Bar::<'static>(_z) = foo;
   |                   ^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/pattern_substs_on_tuple_enum_variant.rs:1:9
   |
LL | #![warn(type_param_on_variant_ctor)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: set the type parameter on the enum
   |
LL |     let Foo::<'static>::Bar(_z) = foo;
   |            ^^^^^^^^^^^    --

warning: type parameter on variant
  --> $DIR/pattern_substs_on_tuple_enum_variant.rs:18:19
   |
LL |         Foo::Bar::<'static>(_z) => {}
   |                   ^^^^^^^^^
   |
help: set the type parameter on the enum
   |
LL |         Foo::<'static>::Bar(_z) => {}
   |            ^^^^^^^^^^^    --

error[E0597]: `y` does not live long enough
  --> $DIR/pattern_substs_on_tuple_enum_variant.rs:8:24
   |
LL |     let foo = Foo::Bar(&y);
   |                        ^^ borrowed value does not live long enough
LL |
LL |     let Foo::Bar::<'static>(_z) = foo;
   |         ----------------------- type annotation requires that `y` is borrowed for `'static`
LL | }
   | - `y` dropped here while still borrowed

error[E0597]: `y` does not live long enough
  --> $DIR/pattern_substs_on_tuple_enum_variant.rs:15:24
   |
LL |     let foo = Foo::Bar(&y);
   |                        ^^ borrowed value does not live long enough
...
LL |         Foo::Bar::<'static>(_z) => {}
   |         ----------------------- type annotation requires that `y` is borrowed for `'static`
LL |     }
LL | }
   | - `y` dropped here while still borrowed

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
